<resources>
    <string name="app_name">tools market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_image">card-image</string>
    <string name="header">Header</string>
    <string name="card_info">Sample text, sample text, sample text, sample text</string>
    <string name="lighting">lighting</string>
    <string name="subhead">Subhead</string>
    <string name="arrow_right">arrow_right</string>
    <string name="round_image">round_image</string>
</resources>