<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_padding"
    app:cardCornerRadius="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/black">

    <ImageView
        android:background="@color/black"
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/card_image"
        android:src="@drawable/background_image" />

    <LinearLayout
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/card_header"
            style="@style/card_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/card_info"
            style="@style/card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_info"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>