<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_padding"
    android:padding="@dimen/default_padding"
    app:cardCornerRadius="@dimen/corner_radius"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:strokeColor="@color/purpleRadius"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingVertical="@dimen/large_padding">

        <ImageView
            android:id="@+id/round_image"
            android:layout_width="80dp"
            android:adjustViewBounds="true"
            android:layout_height="80dp"
            android:contentDescription="@string/round_image"
            android:src="@drawable/default_circle"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/round_image"
            android:clipToOutline="true"
            style="@style/roundedImageView"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/round_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/card_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textColor="@color/black"
                style="@style/card_header.low"/>

            <TextView
                android:id="@+id/card_subhead"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subhead"
                android:textColor="@color/black"
                style="@style/card_subhead.low"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>